# ai-scaffolding

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  justfile  mkdocs.yml  pyproject.toml
.claude/: plugin-marketplaces.json  settings.json  status-line.sh
.claude/agents/: api.md  config.md  database.md  graphs.md  prompts.md  recipes.md  reviewer.md  supervisor.md  test.md  ui.md
.claude/hooks/: auto-format.sh  enforce-package-manager.sh  lint-gate.sh  notify.sh
.claude/rules/: agent-conventions.md  architecture.md  code-conventions.md  communication-style.md  conventions.md  dev-workflow.md  diagrams.md  documents.md  git-commits.md  justfile-conventions.md  langgraph-conventions.md  langgraph-testing.md  logging-enforcement.md  logging.md  mapper-patterns.md  plan-documents.md  project-structure.md  rest-query-params.md  rule-conventions.md  service-layer-patterns.md
docs/: SETUP.md  index.md
docs/functional/: 001-agentic-architecture-review.md  002-knowledge-frontmatter.md  003-rag-retrieval-augmented-generation.md
docs/plans/: 001-langgraph-introduction.md  004-fork-recipe.md  005-knowledge-base.md  006-llm-knowledge-frontmatter.md  007-chromadb-rag.md  008-streaming-responses.md
docs/technical/: 001-agentic-architecture-review.md  002-knowledge-frontmatter.md  003-rag-retrieval-augmented-generation.md
scripts/: check.just  db.just  dev.just  docs.just  fmt.just  fork.just  gen.just  git.just  lint.just  review.just  setup.just  test.just
scripts/lib/: backfill_chroma.py  check_di.py  check_lines.sh  check_literal_strings.py  fork.py  (+5 more)
(+163 files in other folders)
